# symai-playground

./: .gitignore  LICENSE  README.md  create_type_system.py  david_deutsch_wiki.txt  extract.py  ontology.py  pyproject.toml  refine_prompt.py  schema.py  stephen_king_wiki.txt  test.py  utils.py
graphs/: commander.py  create_graph.py  create_types.py  data.py  graph.py  models.py  properties.py  test.py  types.py  utils.py
graphs/commands/: add.py  base.py  create_types.py  delete.py  execute.py  execution.py
graphs/commands/types/: __init__.py  add.py  base.py  create_types.py  delete.py
graphs/expressions/: __init__.py  create_graph.py  fill_graph.py
graphs/graph/: edge.py  node.py
oldgraphs/: create_types.py  models.py  test.py
oldgraphs/expressions/: create_graph.py  fill_graph.py
ontology/: test.py  utils.py
ontology/expressions/: work_on_graph.py
ontology/graphs/: commander.py  data.py  edges.py  graph.py  properties.py  vertices.py
ontology/graphs/commands/: add.py  base.py  create_types.py  delete.py  union.py
prompts/: command_graph_prompt.txt  create_graph_prompt.txt  fill_graph_prompt.txt  fix_graph_prompt.txt
samples/: white_nights.txt
src/ontology/: README.md  test.py  utils.py
src/ontology/types/: edges.py  vertices.py
src/ontology/types/defs/: __init__.py  base.py  edge.py  edges.py  node.py  ontology.py  properties.py  property.py  vertices.py
