[project]
name = "extensity-playground"
version = "0.1.0"
description = "A playground for experiments in collaboration with [ExtensityAI](https://github.com/ExtensityAI/) utilizing their project [SymbolicAI](https://github.com/ExtensityAI/symbolicai)."
authors = [{ name = "artificiadrian", email = "adrian@artificiadrian.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.51.0",
    "networkx>=3.3",
    "pyvis>=0.3.2",
    "tiktoken>=0.7.0",
    "pydantic>=2.9.2",
]

[tool.uv]
cache-dir = "D:/.uv/cache"
